--- a/static/templates/settings/account-settings.handlebars
+++ b/static/templates/settings/account-settings.handlebars
@@ -156,7 +156,7 @@
         </div>
 
         <div class="inline-block user-avatar-section">
-            <h3>{{t "User avatar" }}</h3>
+            <h3>{{t "Profile picture" }}</h3>
 
             <div class="inline-block">
                 <div id="user-settings-avatar">
@@ -165,16 +165,16 @@
                         <a href="https://en.gravatar.com/" target="_blank" class="white-color">{{t "Avatar from Gravatar" }}</a>
                     </div>
                 </div>
-                <input type="file" name="user_avatar_file_input" class="notvisible" id="user_avatar_file_input" value="{{t 'Upload avatar' }}" />
+                <input type="file" name="user_avatar_file_input" class="notvisible" id="user_avatar_file_input" value="{{t 'Upload profile picture' }}" />
                 <div id="upload_avatar_spinner"></div>
             </div>
             <div class="avatar-controls">
                 <button class="button rounded sea-green w-200 block" id="user_avatar_upload_button">
-                    {{t 'Upload new avatar' }}
+                    {{t 'Upload new profile picture' }}
                 </button>
                 <div id="user_avatar_file_input_error" class="text-error"></div>
                 <button class="button rounded btn-danger w-200 m-t-20 block" id="user_avatar_delete_button">
-                    {{t 'Delete avatar' }}
+                    {{t 'Delete profile picture' }}
                 </button>
             </div>
         </div>
