--- a/static/templates/settings/organization-profile-admin.handlebars
+++ b/static/templates/settings/organization-profile-admin.handlebars
@@ -27,22 +27,22 @@
             </div>
         </div>
 
-        <div>{{t "Organization avatar" }}</div>
+        <div>{{t "Organization profile picture" }}</div>
         <div class="realm-icon-section">
             <div class="inline-block">
                 <img id="realm-settings-icon" src="{{ realm_icon_url }}"/>
                 <input type="file" name="realm_icon_file_input" class="notvisible"
-                  id="realm_icon_file_input" value="{{t 'Upload icon' }}"/>
+                  id="realm_icon_file_input" value="{{t 'Upload profile picture' }}"/>
             </div>
             <div class="inline-block avatar-controls">
                 <div id="realm_icon_file_input_error" class="alert text-error"></div>
                 <button class="button rounded sea-green w-200 block input-size"
                   id="realm_icon_upload_button">
-                    <span id="upload_icon_button_text">{{t 'Upload new avatar' }}</span>
+                    <span id="upload_icon_button_text">{{t 'Upload new profile picture' }}</span>
                     <span id="upload_icon_spinner"></span>
                 </button>
                 <button class="button rounded btn-danger w-200 m-t-10 block input-size"
-                  id="realm_icon_delete_button">{{t 'Delete icon' }}</button>
+                  id="realm_icon_delete_button">{{t 'Delete profile picture' }}</button>
             </div>
         </div>
 
