user status: Add JS tooltips to buddy list and PM list.
Add js tooltips instead of html hovers for user circles and
user names in the buddy list and the private messages list.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -449,6 +449,7 @@ li.show-more-private-messages {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 2px;
+    margin-right: 5px;
     position: relative;
     top: 0px;
 }
