--- a/static/templates/group_pms.handlebars
+++ b/static/templates/group_pms.handlebars
@@ -7,7 +7,7 @@
         {{else}}
         <span class="user_circle_fraction" style="background:none; border-color:rgb(127,127,127);"></span>
         {{/if}}
-        <a href="{{href}}" data-name="{{name}}" title="{{name}}" class="group-pm-link">{{short_name}}</a>
+        <a class="group-pm-link show_group_pm" href="{{href}}" data-name="{{name}}" data-user-ids="{{user_ids_string}}">{{short_name}}</a>
         <span class="count"><span class="value"></span></span>
     </div>
 </li>
