--- a/static/templates/user_presence_row.handlebars
+++ b/static/templates/user_presence_row.handlebars
@@ -1,11 +1,10 @@
 <li data-user-id="{{user_id}}" class="user_sidebar_entry {{#if num_unread}} user-with-count {{/if}} narrow-filter {{#if faded}} user-fade {{/if}}">
     <div class="selectable_sidebar_block">
-        <span class="{{user_circle_class}} user_circle" title={{user_circle_status}}></span>
+        <span class="{{user_circle_class}} user_circle user_circle_buddy" data-user-id="{{user_id}}"></span>
         <a class="user-presence-link"
           href="{{href}}"
           data-user-id="{{user_id}}"
-          data-name="{{name}}"
-          title="{{title}}">
+          data-name="{{name}}">
             {{name}}
             {{#if my_user_status}}
             <span class="my_user_status">{{my_user_status}}</span>
