--- a/static/templates/sidebar_private_message_list.handlebars
+++ b/static/templates/sidebar_private_message_list.handlebars
@@ -1,7 +1,7 @@
 <div id="private-container" class="scrolling_list">
     <ul class='expanded_private_messages {{zoom_class}}' data-name='private'>
         {{#each messages}}
-        <li class='{{#if is_zero}}zero-pm-unreads{{/if}} {{#if zoom_out_hide}}zoom-out-hide{{/if}} expanded_private_message' data-user-ids-string='{{user_ids_string}}'>
+        <li class='{{#if is_zero}}zero-pm-unreads{{/if}} {{#if zoom_out_hide}}zoom-out-hide{{/if}} top_left_row expanded_private_message' data-user-ids-string='{{user_ids_string}}'>
             <span class='pm-box'>
 
                 <div class="pm_left_col">
@@ -26,7 +26,7 @@
         </li>
         {{/each}}
         {{#if want_show_more_messages_links}}
-        <li class="show-more-private-messages" data-name='more-private-messages'>
+        <li class="show-more-private-messages top_left_row" data-name='more-private-messages'>
             <a href="#">({{t "more conversations" }})</a>
         </li>
         {{/if}}
