Fix hover for "Private messages".
It's ugly to hover the entire block--just hover the individual
rows.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -305,7 +305,7 @@ on a dark background, and don't change the dark labels dark either. */
         background-color: hsla(199, 33%, 46%, 0.2);
     }
 
-    #global_filters li:hover,
+    .top_left_row:hover,
     #stream_filters li:hover,
     #stream_filters li.highlighted_stream,
     #group-pms li:hover,
