--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -123,7 +123,7 @@ li.show-more-private-messages a {
     max-height: 200px;
 }
 
-#global_filters li:hover,
+.top_left_row:hover,
 #stream_filters li:hover,
 #stream_filters li.highlighted_stream {
     background-color: hsl(93, 18%, 82%);
