minor: Change markup for icon fonts.
I am trying to phase out the confusing global-filter
name.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -180,14 +180,14 @@ a.conversation-partners:hover {
     text-decoration: underline;
 }
 
-#global_filters .global-filter i.fa-home {
+.top_left_all_messages i.fa-home {
     position: relative;
     top: 1px;
     left: -1px;
     font-size: 17px;
 }
 
-#global_filters .global-filter i.fa-envelope {
+.top_left_private_messages i.fa-envelope {
     font-size: 12px;
 }
 
