--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -306,7 +306,7 @@ on a dark background, and don't change the dark labels dark either. */
     }
 
     .top_left_row:hover,
-    #stream_filters li:hover,
+    .bottom_left_row:hover,
     #stream_filters li.highlighted_stream,
     #group-pms li:hover,
     #user_presences li:hover,
