--- a/static/templates/more_topics.handlebars
+++ b/static/templates/more_topics.handlebars
@@ -1,4 +1,4 @@
-<li class="show-more-topics">
+<li class="show-more-topics bottom_left_row">
     <a href="#">{{t "more topics" }}</a>
 </li>
 <li class="searching-for-more-topics">
