--- a/static/templates/stream_sidebar_row.handlebars
+++ b/static/templates/stream_sidebar_row.handlebars
@@ -2,17 +2,18 @@
 
 <li class="narrow-filter{{#if not_in_home_view}} out_of_home_view{{/if}}"
   data-stream-id="{{id}}" data-stream-name="{{name}}">
-    <div class="subscription_block selectable_sidebar_block">
+    <div class="bottom_left_row">
+        <div class="subscription_block selectable_sidebar_block">
 
-        <span id="stream_sidebar_privacy_swatch_{{id}}" class="stream-privacy" style="color: {{color}}">
-            {{! This controls whether the swatchnext to streams in the left sidebar has a lock icon. }}
-            {{ partial "stream_privacy" }}
-        </span>
+            <span id="stream_sidebar_privacy_swatch_{{id}}" class="stream-privacy" style="color: {{color}}">
+                {{! This controls whether the swatchnext to streams in the left sidebar has a lock icon. }}
+                {{ partial "stream_privacy" }}
+            </span>
 
-        <a href="{{uri}}" class="stream-name">{{name}}</a>
+            <a href="{{uri}}" class="stream-name">{{name}}</a>
 
-        <div class="count"><div class="value"></div></div>
+            <div class="count"><div class="value"></div></div>
+        </div>
+        <span class="stream-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
     </div>
-    <span class="stream-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
-
 </li>
