user status: Refactor buddy and pm list tooltip click handlers.
Move register_tooltip function to components.js to slim down all
click handlers for the tooltips.

--- a/static/templates/group_pms.handlebars
+++ b/static/templates/group_pms.handlebars
@@ -7,7 +7,7 @@
         {{else}}
         <span class="user_circle_fraction" style="background:none; border-color:rgb(127,127,127);"></span>
         {{/if}}
-        <a class="group-pm-link show_group_pm" href="{{href}}" data-name="{{name}}" data-user-ids="{{user_ids_string}}">{{short_name}}</a>
+        <a class="group-pm-link show_pm_partner" href="{{href}}" data-name="{{name}}" data-hover="{{title}}">{{short_name}}</a>
         <span class="count"><span class="value"></span></span>
     </div>
 </li>
