--- a/static/styles/lightbox.scss
+++ b/static/styles/lightbox.scss
@@ -259,7 +259,7 @@
     opacity: 1;
 }
 
-.image-actions .button {
+#lightbox_overlay .image-actions .button {
     font-size: 0.8rem;
     min-width: inherit;
     padding: 4px 10px;
@@ -269,17 +269,17 @@
     border-radius: 4px;
 }
 
-.image-actions .button:hover {
+#lightbox_overlay .image-actions .button:hover {
     background-color: hsl(0, 0%, 100%);
     border-color: hsl(0, 0%, 100%);
     color: hsl(227, 40%, 16%);
 }
 
-.image-actions a.button {
+#lightbox_overlay .image-actions a.button {
     text-decoration: none;
 }
 
-.button .download {
+#lightbox_overlay .button .download {
     top: 1px;
 }
 
