navbar: Color lock/hash to stream color.
This removes the segment that would color the background of the "stream"
breadcrumb, instead we now color the lock/hash to the steam color
instead.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -79,8 +79,7 @@ body.night-mode {
 
     /* do not turn the .message_header .stream_label text dark on hover because they're
 on a dark background, and don't change the dark labels dark either. */
-    .message_header:not(.dark_background) a.stream_label:not(.dark_background):hover,
-    #tab_list li.stream:not(.dark_background) {
+    .message_header:not(.dark_background) a.stream_label:not(.dark_background):hover {
         color: hsl(212, 28%, 18%);
     }
 
