messagebox: Use edited bools in message body and me message templates.
Use the new bools and remove the complicated if else statements from
the templates for the "(EDITED)" label.

--- a/static/templates/me_message.handlebars
+++ b/static/templates/me_message.handlebars
@@ -13,8 +13,8 @@
             {{{ status_message }}}
         </span>
 
-        {{#if_and last_edit_timestr include_sender}}
+        {{#if edited_status_msg}}
         {{partial "edited_notice"}}
-        {{/if_and}}
+        {{/if}}
     </span>
 </span>
