--- a/templates/zerver/config_error.html
+++ b/templates/zerver/config_error.html
@@ -97,6 +97,7 @@
                     {% endif %}
                     <p>After making your changes, remember to restart
                     the Zulip server.</p>
+                    <p><a href=""> Refresh</a> to try again or <a href="/login/">click here</a> to go back to the login page.</p>
                 </div>
 
             </div>
