popover: Show normal popover instead of extended profile one for bot owner.
We should show normal popover instead of extended profile one for the bot
owner in bots section of organization settings.

A new function show_user_info_popover is added, as it makes sense to keep
it separated from the function used to open popover for sender of a
message, which uses the message from which the popover is opened.
This added function can further be used for showing popover for
"invited_by" in invites table.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -179,7 +179,8 @@ ul {
     }
 }
 
-.message-info-popover {
+.message-info-popover,
+.user-info-popover {
     width: 240px;
     padding: 0;
 
@@ -353,7 +354,8 @@ ul {
 }
 
 @media (max-width: 768px) {
-    .message-info-popover {
+    .message-info-popover,
+    .user-info-popover {
         display: flex !important;
         justify-content: center;
         align-items: center;
