popover: Add "Copy mention syntax" option for non-message user popovers.
This commit replaces the "Reply mentioning user" option with "Copy mention
syntax" for user info popovers that are not opened from a message.

Clicking on "Copy mention syntax" will copy the mention syntax of user to
clipboard.

This change is done because user popovers not opened from message are not
linked to any message.

--- a/static/templates/user_info_popover_content.hbs
+++ b/static/templates/user_info_popover_content.hbs
@@ -112,9 +112,19 @@
     {{/if}}
     {{#unless is_me}}
     <li>
+        {{#if has_message_context}}
         <a tabindex="0" class="mention_user">
-            <i class="fa fa-at" aria-hidden="true"></i> {{#tr this}}Reply mentioning user{{/tr}} {{#if is_sender_popover}}<span class="hotkey-hint">(@)</span>{{/if}}
+            <i class="fa fa-at" aria-hidden="true"></i>
+            {{#tr this}}Reply mentioning user{{/tr}}
+            {{#if is_sender_popover}}<span class="hotkey-hint">(@)</span>{{/if}}
         </a>
+        {{else}}
+        <a tabindex="0" class="copy_mention_syntax" data-clipboard-text="{{ user_mention_syntax }}">
+            <i class="fa fa-at" aria-hidden="true"></i>
+            {{#tr this}}Copy user mention syntax{{/tr}}
+            {{#if is_sender_popover}}<span class="hotkey-hint">(@)</span>{{/if}}
+        </a>
+        {{/if}}
     </li>
     {{/unless}}
     {{#if is_me}}
