invites: Display name of referrer instead of email in invites list.
We now display the name of referrer instead of email in invites list
and clicking on the name opens the user popover.
This helps us to avoid showing fake emails when the email address
visibility is hidden.

Tweaked by tabbott to still look at both email and name for filtering.

--- a/static/templates/admin_invites_list.hbs
+++ b/static/templates/admin_invites_list.hbs
@@ -13,7 +13,9 @@
     </td>
     {{#if is_admin}}
     <td>
-        <span class="referred_by">{{referrer_email}}</span>
+        <span class="referred_by">
+            <a data-user-id="{{invited_by_user_id}}" href="#" class="view_user_profile">{{referrer_name}}</a>
+        </span>
     </td>
     {{/if}}
     <td>
