--- a/templates/analytics/realm_details.html
+++ b/templates/analytics/realm_details.html
@@ -75,6 +75,21 @@
     <b>Payment method</b>: {% if realm.current_plan.charge_automatically %}Card{% else %}Send invoice{% endif %}<br>
     <b>Next invoice date</b>: {{ realm.current_plan.next_invoice_date.strftime('%d %B %Y') }}<br>
 </div>
+
+<form method="POST" class="downgrade-plan-form">
+    <br>
+    <b>Downgrade plan</b><br>
+    {{ csrf_input }}
+    <input type="hidden" name="realm_id" value="{{ realm.id }}" />
+    <select name="downgrade_method" class="downgrade-plan-method-select" required>
+        <option disabled value="" selected>-- select --</option>
+        <option value="downgrade_at_billing_cycle_end">Downgrade at the end of current billing cycle</option>
+        <option value="downgrade_now_without_additional_licenses">Downgrade now without creating additional invoices</option>
+        <option value="downgrade_now_void_open_invoices">Downgrade now and void open invoices</option>
+    </select>
+    <button type="submit" class="button rounded small support-submit-button">Downgrade</button>
+</form>
+
 {% endif %}
 
 <form method="POST" class="scrub-realm-form">
