--- a/static/styles/portico/activity.css
+++ b/static/styles/portico/activity.css
@@ -94,9 +94,14 @@ tr.admin td:first-child {
     top: -40px;
 }
 
-.downgrade-plan-form {
+.billing-method-form {
     position: relative;
     top: -70px;
+}
+
+.downgrade-plan-form {
+    position: relative;
+    top: -115px;
 }
 
 .downgrade-plan-method-select {
@@ -105,7 +110,7 @@ tr.admin td:first-child {
 
 .scrub-realm-form {
     position: relative;
-    top: -40px;
+    top: -70px;
 }
 
 .support-search-button {
