display_setting: Add user display settings for hiding inline image.
New display setting that allow users to hide inline image preview.
Selecting 'Hide inline image preview' in User Display Setting
would dynamically wrap the message-inline image in details tag
with attribute loading="lazy" to load images only when needed.
The html structure would look like:
<div class=".message_inline_image">
    <summary>My image</summary>
    <details>
        <a href="/my_image.png" title="My image">
            <img src="/my_image.png" loading="lazy">
        </a>
    </details>
</div>

Fixes: #16300.

--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -287,7 +287,7 @@
         position: relative;
         margin-bottom: 5px;
         margin-left: 5px;
-        height: 100px;
+        max-height: 117px;
         display: block !important;
         border: none !important;
     }
@@ -330,8 +330,7 @@
     .message_inline_image img,
     .message_inline_ref img {
         height: auto;
-        max-height: 100%;
-        float: left;
+        max-height: 100px;
         margin-right: 10px;
     }
 
