--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -7,7 +7,6 @@
 {% block portico_content %}
 
 {% include 'zerver/landing_nav.html' %}
-{% include 'zerver/gradients.html' %}
 
 <div class="portico-landing features-app">
     <section class="hero">
@@ -74,9 +73,9 @@
         </svg>
         <h2>Highly configurable notifications.</h2>
 
-        <div class="center">
-            <div class="image-block"></div>
-            <div class="feature-list">
+        <div class="row">
+            <div class="image-block col-6"></div>
+            <div class="feature-list col-6">
                 <h3>@-mentions</h3>
                 <h3>Stream-wide announcements</h3>
                 <h3>Desktop notifications</h3>
