--- a/templates/zerver/why-zulip.html
+++ b/templates/zerver/why-zulip.html
@@ -10,6 +10,16 @@
 
 {% block customhead %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+nav.navbar {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: 10;
+    background: transparent;
+}
+</style>
 {% endblock %}
 
 {% block portico_content %}
