--- a/static/styles/components.css
+++ b/static/styles/components.css
@@ -14,6 +14,7 @@
 
             ~ span {
                 display: inline-block;
+                box-sizing: content-box;
                 vertical-align: middle;
                 position: relative;
                 top: -2px;
