--- a/static/styles/portico/integrations.css
+++ b/static/styles/portico/integrations.css
@@ -7,6 +7,8 @@ $category-text: hsl(219, 23%, 33%);
 .portico-landing.integrations {
     color: hsl(0, 0%, 27%);
     font-weight: normal;
+    padding-top: 50px;
+    padding-bottom: 50px;
 
     h1,
     h2,
@@ -139,6 +141,7 @@ $category-text: hsl(219, 23%, 33%);
 
                     &:focus {
                         border: 1px solid $border-green;
+                        outline: none;
                     }
 
                     @media (max-width: 768px) {
