--- a/templates/zerver/landing_nav.html
+++ b/templates/zerver/landing_nav.html
@@ -1,67 +1,60 @@
 {% if not isolated_page %}
-    {% if landing_page_navbar_message %}
-    <div id="navbar-custom-message">
-        {{ landing_page_navbar_message |safe }}
-    </div>
-    {% endif %}
+{% if landing_page_navbar_message %}
+<div id="navbar-custom-message">
+    {{ landing_page_navbar_message |safe }}
+</div>
+{% endif %}
 {% endif %}
 
 {% if not isolated_page %}
-<nav class="portico-header">
-    <div class="content">
-        <a class="brand logo" href="{{ root_domain_uri }}">
-            <svg class="brand-logo" role="img" aria-label="{{ _('Zulip') }}" xmlns="http://www.w3.org/2000/svg" viewBox="68.96 55.62 1742.12 450.43" height="25">
-                <path fill="hsl(0, 0%, 100%)" d="M473.09 122.97c0 22.69-10.19 42.85-25.72 55.08L296.61 312.69c-2.8 2.4-6.44-1.47-4.42-4.7l55.3-110.72c1.55-3.1-.46-6.91-3.64-6.91H129.36c-33.22 0-60.4-30.32-60.4-67.37 0-37.06 27.18-67.37 60.4-67.37h283.33c33.22-.02 60.4 30.3 60.4 67.35zM129.36 506.05h283.33c33.22 0 60.4-30.32 60.4-67.37 0-37.06-27.18-67.37-60.4-67.37H198.2c-3.18 0-5.19-3.81-3.64-6.91l55.3-110.72c2.02-3.23-1.62-7.1-4.42-4.7L94.68 383.6c-15.53 12.22-25.72 32.39-25.72 55.08 0 37.05 27.18 67.37 60.4 67.37zm522.5-124.15l124.78-179.6v-1.56H663.52v-48.98h190.09v34.21L731.55 363.24v1.56h124.01v48.98h-203.7V381.9zm338.98-230.14V302.6c0 45.09 17.1 68.03 47.43 68.03 31.1 0 48.2-21.77 48.2-68.03V151.76h59.09V298.7c0 80.86-40.82 119.34-109.24 119.34-66.09 0-104.96-36.54-104.96-120.12V151.76h59.48zm244.91 0h59.48v212.25h104.18v49.76h-163.66V151.76zm297 0v262.01h-59.48V151.76h59.48zm90.18 3.5c18.27-3.11 43.93-5.44 80.08-5.44 36.54 0 62.59 7 80.08 20.99 16.72 13.22 27.99 34.99 27.99 60.64 0 25.66-8.55 47.43-24.1 62.2-20.21 19.05-50.15 27.6-85.13 27.6-7.77 0-14.77-.39-20.21-1.17v93.69h-58.7V155.26zm58.7 118.96c5.05 1.17 11.27 1.55 19.83 1.55 31.49 0 50.92-15.94 50.92-42.76 0-24.1-16.72-38.49-46.26-38.49-12.05 0-20.21 1.17-24.49 2.33v77.37z"/>
-            </svg>
-        </a>
-        <ul>
-            <div class="exit">&times;</div>
-            <li data-on-page="hello">
-                <a href="/hello/">Home</a>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="/static/images/logo/zulip-org-logo.svg" alt="zulip-org-logo" loading="lazy">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Features</a>
+              <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Overview</a>
+                <a class="dropdown-item" href="#">Integrations</a>
+                <a class="dropdown-item" href="#">Rest API</a>
+                <a class="dropdown-item" href="#">Security</a>
+              </div>
             </li>
-            <li data-on-page="why-zulip">
-                <a href="/why-zulip/">Why Zulip</a>
-            </li>
-            <li data-on-page="features">
-                <a href="/features/">Features</a>
-            </li>
-            <li data-on-page="plans">
-                <a href="/plans/">Plans</a>
-            </li>
-            <li data-on-page="apps">
-                <a href="{{ apps_page_url }}">Apps</a>
-            </li>
-            <li data-on-page="integrations">
-                <a href="/integrations/">Integrations</a>
-            </li>
-            <li data-on-page="security">
-                <a href="/security/">Security</a>
-            </li>
-            {% if user_is_authenticated %}
-                {% include 'zerver/portico-header-dropdown.html' %}
-            {% else %}
-                {% if login_link_disabled %}
-                {% else %}
-                <li>
-                    <a href="/login/">Login</a>
-                </li>
-                {% endif %}
-                {% if register_link_disabled %}
-                {% else %}
-                <li>
-                    <a href="/register/">Sign up</a>
-                </li>
-                {% endif %}
-            {% endif %}
-            {% if find_team_link_disabled %}
-            {% else %}
-            <li>
-                <a href="/accounts/find/">Find Accounts</a>
-            </li>
-            {% endif %}
-        </ul>
-        <div class="clear-float"></div>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
+                <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/for/open-source/">OS Communities</a>
+                    <a class="dropdown-item" href="/for/companies/">Enterprise</a>
+                    <a class="dropdown-item" href="/for/working-groups-and-communities/">Working Groups</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/plans" id="navbarDropdown" role="button" aria-expanded="false">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
+                <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="/community">Get Involved</a>
+                  <a class="dropdown-item" href="#">Help Center</a>
+                  <a class="dropdown-item" href="#">API</a>
+                  <a class="dropdown-item" href="#">Forums</a>
+                  <a class="dropdown-item" href="#">Github</a>
+                  <a class="dropdown-item" href="#">Support</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/apps" id="navbarDropdown" role="button" aria-expanded="false">Apps</a>
+              </li>
+          </ul>
+          <a class="btn btn-sm btn-secondary mt-3 mt-lg-0 d-block d-lg-inline-block try-now-nav" href="#">Try now</a>
+        </div>
     </div>
-    <svg height="32px" class="hamburger" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
 </nav>
 {% endif %}
