--- a/templates/zerver/team.html
+++ b/templates/zerver/team.html
@@ -5,6 +5,27 @@
 <title>Zulip: the best group chat for open source projects</title>
 {% endblock %}
 
+
+{% block customhead %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+
+nav.navbar {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: 10;
+    background: transparent;
+}
+
+.landing-footer .row {
+    border: 0px;
+}
+
+</style>
+{% endblock %}
+
 {% block portico_content %}
 
 {% include 'zerver/landing_nav.html' %}
