tornado: Remove explicit tornado_processes setting; compute it.
We can compute the intended number of processes from the sharding
configuration.  In doing so, also validate that all of the ports are
contiguous.

This removes a discrepancy between `scripts/lib/sharding.py` and other
parts of the codebase about if merely having a `[tornado_sharding]`
section is sufficient to enable sharding.  Having behaviour which
changes merely based on if an empty section exists is surprising.

This does require that a (presumably empty) `9800` configuration line
exist, but making that default explicit is useful.

After this commit, configuring sharding can be done by adding to
`zulip.conf`:

```
[tornado_sharding]
9800 =              # default
9801 = other_realm
```

Followed by running `./scripts/refresh-sharding-and-restart`.

--- a/puppet/zulip/templates/nginx/tornado-upstreams.conf.template.erb
+++ b/puppet/zulip/templates/nginx/tornado-upstreams.conf.template.erb
@@ -1,4 +1,4 @@
-<% if @tornado_multiprocess -%>
+<% if @tornado_ports.length > 1 -%>
 <% @tornado_ports.each do |port| -%>
 upstream tornado<%= port %> {
     server 127.0.0.1:<%= port %>;
