--- a/templates/confirmation/link_does_not_exist.html
+++ b/templates/confirmation/link_does_not_exist.html
@@ -9,7 +9,7 @@
                 <h1 class="lead">{{ _("Whoops. We couldn't find your confirmation link in the system.") }}</h1>
                 <p>
                     {% trans %}
-                    Anyway, shoot us a line at <a href="mailto:{{ support_email }}">{{ support_email }}</a> and we'll get this resolved shortly.
+                    Anyway, shoot us a line at {{ support_email_html_tag }} and we'll get this resolved shortly.
                     {% endtrans %}
                 </p>
             </div>
