--- a/templates/confirmation/link_malformed.html
+++ b/templates/confirmation/link_malformed.html
@@ -10,7 +10,7 @@
                 <p>{{ _("Make sure you copied the link correctly in to your browser. If you're still encountering this page, it's probably our fault. We're sorry.") }}</p>
                 <p>
                     {% trans %}
-                    Anyway, shoot us a line at <a href="mailto:{{ support_email }}">{{ support_email }}</a> and we'll get this resolved shortly.
+                    Anyway, shoot us a line at {{ support_email_html_tag }} and we'll get this resolved shortly.
                     {% endtrans %}
                 </p>
             </div>
